<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>peng.gao</groupId>
        <artifactId>java</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>javafx</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.8.2</junit.version>
        <!--        <openfx.version>11.0.2</openfx.version>-->
        <openfx.version>17.0.7</openfx.version>
        <lombok.version>1.18.28</lombok.version>

        <app.name>SomeIpMatrixCheckerApp</app.name>
        <app.version>1.0.0</app.version>
        <app.icon>projects/smIpCmxCheck/logo.ico</app.icon>
        <!--        must include module name-->
        <main.class>projects.smIpCmxCheck.SomeIpMatrixCheckerApplication</main.class>
        <module.name>javafxdemos</module.name>
        <!--        app-image", "exe", "msi"-->
        <image.type>app-image</image.type>
        <!--        javaFx应用程序打包步骤：-->
        <!--        1. 更改以上参数，其中app.name、app.icon、main.path三个参数必须填写-->
        <!--        2. 运行命令生成可执行程序-->
        <!--            mvn clean   -->
        <!--            mvn javafx:jlink -f pom.xml -->
        <!--            mvn exec:exec@image -f pom.xml  -->
        <!--            mvn exec:exec@installer -f pom.xml  -->
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${openfx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${openfx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${openfx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- 自定义jar-->
        <dependency>
            <groupId>cn.ept</groupId>
            <artifactId>excelhandler</artifactId>
            <version>2.2.1</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <encoding>UTF-8</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <!-- Default configuration for running with: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>${module.name}/${main.class}</mainClass>
                            <launcher>${app.name}</launcher>
                            <jlinkZipName>${app.name}</jlinkZipName>
                            <jlinkImageName>build-link</jlinkImageName>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <noHeaderFiles>true</noHeaderFiles>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!--         copy dependency jar to specified location-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!--这里相当于将第三方jar包一起并入到项目jar包中去了。-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>${main.class}</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
                        <phase>package</phase> <!-- 指定在打包节点执行jar包合并操作 -->
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>image</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>jpackage</executable>
                            <workingDirectory>${project.basedir}</workingDirectory>
                            <arguments>
                                <!-- Application Name-->
                                <argument>-n</argument>
                                <argument>${app.name}</argument>
                                <argument>--type</argument>
                                <argument>${image.type}</argument>
                                <argument>--java-options</argument>
                                <argument>
                                    --add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix
                                </argument>
                                <argument>-m</argument>
                                <argument>${module.name}/${main.class}</argument>
                                <argument>--icon</argument>
                                <argument>${project.basedir}/src/main/resources/${app.icon}</argument>
                                <argument>--runtime-image</argument>
                                <argument>${project.basedir}/target/build-link</argument>
                                <argument>--dest</argument>
                                <argument>${project.basedir}/target/build-package</argument>
                                <argument>--verbose</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>installer</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>jpackage</executable>
                            <workingDirectory>${project.basedir}</workingDirectory>
                            <arguments>
                                <argument>-n</argument>
                                <argument>${app.name}</argument>
                                <argument>--app-image</argument>
                                <argument>${project.basedir}/target/build-package/${app.name}</argument>
                                <argument>--app-version</argument>
                                <argument>${app.version}</argument>
                                <argument>--dest</argument>
                                <argument>${project.basedir}/target/build-link-package</argument>
                                <argument>--temp</argument>
                                <argument>${project.basedir}/target/build-link-package/temp</argument>
                                <argument>--win-dir-chooser</argument>
                                <argument>--win-menu</argument>
                                <argument>--win-menu-group</argument>
                                <argument>${app.name}</argument>
                                <argument>--win-shortcut</argument>
                                <argument>--verbose</argument>
                                <argument>--vendor</argument>
                                <argument>Shanghai E-Planet Technologies Co.,Ltd</argument>
                                <argument>--copyright</argument>
                                <argument>2014–2023 上海怿星电子科技有限公司</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>
</project>